--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@sh-winter/vite-plugin-qiankun",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "vite qiankun plugin",
-  "main": "dist/index.js",
-  "type": "module",
+  "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
-  "module": "dist/index.js",
+  "module": "dist/index.mjs",
   "scripts": {
     "build": "tsc && rollup -c"
   },
