--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@sh-winter/vite-plugin-qiankun",
-  "version": "0.0.13",
+  "version": "0.0.18",
   "description": "vite qiankun plugin",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.mjs",
   "scripts": {
@@ -22,13 +22,15 @@
   "author": "sh-winter",
   "license": "MIT",
   "dependencies": {
+    "@vue/compiler-sfc": "^3.2.0",
     "cheerio": "^1.0.0-rc.10",
-    "srcset": "^5.0.0",
+    "srcset": "4.0.0",
     "valid-data-url": "^4.0.0",
-    "@vue/compiler-sfc": "^3.2.0"
+    "vite": "^2.8.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/node": "^17.0.17",
     "@types/valid-data-url": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
@@ -38,12 +40,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "rollup": "^2.67.2",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.0"
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
+    "@vue/compiler-sfc": ">=3",
     "typescript": ">=4",
-    "vite": ">=2",
-    "@vue/compiler-sfc": ">=3"
+    "vite": ">=2"
   }
 }
