--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sh-winter/vite-plugin-qiankun",
-  "version": "0.0.19",
+  "version": "0.0.23",
   "description": "vite qiankun plugin",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -26,7 +26,7 @@
     "cheerio": "^1.0.0-rc.10",
     "srcset": "4.0.0",
     "valid-data-url": "^4.0.0",
-    "vite": "^2.8.0"
+    "vite": ">=2"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
