--- a/example/main/package.json
+++ b/example/main/package.json
@@ -15,7 +15,6 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.4.4",
-    "vite": "^2.8.0"
+    "typescript": "^4.4.4"
   }
 }
