--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "types": "dist/index.d.ts",
   "module": "dist/index.mjs",
   "scripts": {
-    "build": "tsc && rollup -c"
+    "build": "tsc && rollup -c",
+    "test": "yarn build && cd scripts && esmo test.ts",
+    "example": "npm run example-dev",
+    "example-dev": "yarn build && cd example && yarn && yarn run:dev",
+    "example-build": "yarn build && cd example && yarn && yarn run:dev"
   },
   "keywords": [
     "vite",
@@ -24,11 +28,7 @@
   "dependencies": {
     "@vue/compiler-sfc": "^3.2.0",
     "cheerio": "^1.0.0-rc.10",
-<<<<<<< Updated upstream
     "srcset": "4.0.0",
-=======
-    "srcset": "^5.0.0",
->>>>>>> Stashed changes
     "valid-data-url": "^4.0.0",
     "vite": ">=2"
   },
@@ -38,17 +38,19 @@
     "@types/valid-data-url": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "@vitejs/plugin-legacy": "^1.7.1",
+    "cypress": "^9.5.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "esno": "^0.14.1",
     "rollup": "^2.67.2",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
     "@vue/compiler-sfc": ">=3",
-    "typescript": ">=4",
     "vite": ">=2"
   }
 }
