--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sh-winter/vite-plugin-qiankun",
-  "version": "0.1.1",
+  "version": "2.0.0",
   "description": "vite qiankun plugin",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,7 +30,7 @@
     "cheerio": "^1.0.0-rc.10",
     "srcset": "4.0.0",
     "valid-data-url": "^4.0.0",
-    "vite": ">=2"
+    "vite": "^2.9.9"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
@@ -50,7 +50,7 @@
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "@vue/compiler-sfc": ">=3",
-    "vite": ">=2"
+    "@vue/compiler-sfc": ">=3.2.0",
+    "vite": ">=2.6.0"
   }
 }
